--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@angular/common": "~8.0.0",
     "@angular/compiler": "~8.0.0",
     "@angular/core": "~8.0.0",
-    "@angular/forms": "~8.0.0",
+    "@angular/forms": "^8.0.3",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
